--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cookiejar": "^2.0.6",
     "debug": "^2.2.0",
     "extend": "^3.0.0",
-    "form-data": "^2.1.1",
+    "form-data": "https://github.com/spark/form-data/releases/download/v2.1.2-relative-path/form-data-2.1.2.tgz",
     "formidable": "^1.0.17",
     "methods": "^1.1.1",
     "mime": "^1.3.4",
